# warprec-benchmark-2026

./: .gitignore  README.md
warprec/: .pre-commit-config.yaml  CODEOWNERS  LICENSE.txt  README.md  bitbucket-pipelines.yml  env.yml  environment.yml  estimate_memory.py  makefile  pyproject.toml  requirements.txt
warprec/callbacks/: my_callback.py
warprec/checkpoints/: SASRec_movielens.pth
warprec/config/: design_config.yml  estimate_test.yml  eval_config.yml  full_config.yml  quick_start.yml  sasrec_mcp_ml1m.yml  test_context.yml  train_config.yml
warprec/config/parallel/: movielens-1m-lightgcn.yml  movielens-1m-neumf.yml  movielens-1m-sasrec.yml  movielens-32m-lightgcn.yml  movielens-32m-neumf.yml  movielens-32m-sasrec.yml  netflix-100m-lightgcn.yml  netflix-100m-neumf.yml  netflix-100m-sasrec.yml
warprec/config/serial/: movielens-1m-ease.yml  movielens-1m-lightgcn.yml  movielens-1m-neumf.yml  movielens-1m-sasrec.yml  movielens-32m-ease.yml  movielens-32m-lightgcn.yml  movielens-32m-neumf.yml  movielens-32m-sasrec.yml  netflix-100m-ease.yml  netflix-100m-itemknn.yml  netflix-100m-lightgcn.yml  netflix-100m-neumf.yml  netflix-100m-sasrec.yml
warprec/docs/source/: clustering.rst  conf.py  install.rst  quick-start.rst
warprec/guides/gcp_clustering/: ray_cluster.yml
warprec/hooks/: update_env_files.py
warprec/sample_pipelines/: custom_pipeline.py
warprec/serving/: Movie_Recommendation_Transcript.md  README.md  serving_config.yml
warprec/serving/common/: __init__.py  config.py  inference.py  (+1 more)
warprec/warprec/: __init__.py  memory_estimator.py  run.py
(+447 files in other folders)
